--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ Now, change the other relevant information in this section, especially if you're
 <!--Time to write. Flesh it out! Define family, qualify it, explicate it telling us why these people are important, and how they contributed to how you got here and where you are going. What about "home." What  does that mean to you? In what ways is it significant in determining where your are going? Replace the content between <h2> and </h2> that says "Lorem ipsum."-->
 
 <div class="textblock">
-  <h2>My family is very special to me because I can talk to thtem about my goals and aspirations without having to worry about judgment. As I have developed my interest in Computer Science, they have encouraged my dreams and provided loving support.</h2>
+  <h2>My family is special to me because I can always talk to them about my goals and aspirations. As I have developed my interest in Computer Science, they have encouraged my dreams and provided loving support.</h2>
 </div>
 
      <!--Replace the image here. You can also control image width and height %. This is the second way we can control the size of images on our website.-->
@@ -137,7 +137,7 @@ FUN FACT: "Lorem ipsum", "Lorem ipsum" was hacked out of Cicero's "De finibus bo
 
 <!--The final step in our process will be to ensure that a smaller version of our "hero image," what Ulmer would refer to as our "wide image," repeats at the bottom of our document to better reinforce this motif.  -->
  <div>
- <img src="continuum.jpg" alt=math on blackboard" class="center-image" style="max-width:25%;max-height:25%;">
+ <img src="starry_sky.jpg" alt=math on blackboard" class="center-image" style="max-width:25%;max-height:25%;">
     </div>
 
     <br>
